fix spacing on dots; center better.

--- a/nivo-slider.css
+++ b/nivo-slider.css
@@ -100,7 +100,6 @@
 /* Control nav styles (e.g. 1,2,3...) */
 .nivo-controlNav {
 	text-align:center;
-	padding: 15px 0;
 }
 .nivo-controlNav a {
 	cursor:pointer;
@@ -145,13 +144,13 @@ Supports Thumbs: true
 }
 
 .nivo-controlNav a {
-	margin-right:8px;
+	margin:0 4px;
 }
 
 .nivo-dots .nivo-controlNav a {
 	display:inline-block;
-	width:22px;
-	height:22px;
+	width:16px;
+	height:16px;
 	background:url(nivo-images/bullets.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
